Avoid inefficient creation of new primitive wrapper objects